[package]
authors = ["Jorge Aparicio <japaricious@gmail.com>"]
build = "build.rs"
description = "The sysroot manager that lets you build and customize `std`"
documentation = "https://github.com/japaric/xargo#xargo"
keywords = ["cli", "cross", "compilation", "std"]
license = "MIT OR Apache-2.0"
name = "xargo"
repository = "https://github.com/japaric/xargo"
version = "0.3.1"

[dependencies]
error-chain = "0.7.2"
fs2 = "0.4.1"
libc = "0.2.18"
rustc_version = "0.1.7"
serde_json = "0.8.4"
tempdir = "0.3.5"
toml = "0.2.1"
walkdir = "1.0.3"

[features]
# Causes Xargo to always build the sysroot using the dev profile
# This is mainly for shorter test times
dev = []
