[package]
authors = ["Jorge Aparicio <jorge@japaric.io>"]
build = "build.rs"
categories = ["command-line-utilities", "development-tools", "embedded"]
description = "The sysroot manager that lets you build and customize `std`"
documentation = "https://github.com/japaric/xargo#xargo"
keywords = ["cli", "cross", "compilation", "std"]
license = "MIT OR Apache-2.0"
name = "xargo"
repository = "https://github.com/japaric/xargo"
version = "0.3.24"
default-run = "xargo"

[dependencies]
error-chain = { version = "0.12", default-features = false }
fs2 = "0.4.1"
libc = "0.2.18"
rustc_version = "0.4"
serde_json = "1.0"
tempdir = "0.3.5"
toml = "0.5.6"
walkdir = "2.3"
dirs = "4.0"

[dev-dependencies]
lazy_static = "1.0.0"
parking_lot = "0.12"

[features]
backtrace = ["error-chain/backtrace"]
